impl: 空のフレームレスウィンドウ表示できるように

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <title>anywherePIP</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <p>hello,world</p>
+    <div class="content">
+        <div class="header">
+
+        </div>
+        <div class="browser">
+
+        </div>
+    </div>
 </body>
 </html>
